community/lists/devel/att-13066/oshmem-voidp-math-errors.txt
Making all in include
make[1]: Entering directory `/home/jsquyres/svn/ompi2/oshmem/include'
make  all-am
make[2]: Entering directory `/home/jsquyres/svn/ompi2/oshmem/include'
make[2]: Leaving directory `/home/jsquyres/svn/ompi2/oshmem/include'
make[1]: Leaving directory `/home/jsquyres/svn/ompi2/oshmem/include'
Making all in shmem/c
make[1]: Entering directory `/home/jsquyres/svn/ompi2/oshmem/shmem/c'
Making all in profile
make[2]: Entering directory `/home/jsquyres/svn/ompi2/oshmem/shmem/c/profile'
make[2]: Nothing to be done for `all'.
make[2]: Leaving directory `/home/jsquyres/svn/ompi2/oshmem/shmem/c/profile'
make[2]: Entering directory `/home/jsquyres/svn/ompi2/oshmem/shmem/c'
make[2]: Nothing to be done for `all-am'.
make[2]: Leaving directory `/home/jsquyres/svn/ompi2/oshmem/shmem/c'
make[1]: Leaving directory `/home/jsquyres/svn/ompi2/oshmem/shmem/c'
Making all in shmem/fortran
make[1]: Entering directory `/home/jsquyres/svn/ompi2/oshmem/shmem/fortran'
make[1]: Nothing to be done for `all'.
make[1]: Leaving directory `/home/jsquyres/svn/ompi2/oshmem/shmem/fortran'
Making all in mca/atomic
make[1]: Entering directory `/home/jsquyres/svn/ompi2/oshmem/mca/atomic'
make[1]: Nothing to be done for `all'.
make[1]: Leaving directory `/home/jsquyres/svn/ompi2/oshmem/mca/atomic'
Making all in mca/memheap
make[1]: Entering directory `/home/jsquyres/svn/ompi2/oshmem/mca/memheap'
  CC       base/memheap_base_alloc.lo
base/memheap_base_alloc.c(248): error #1338: arithmetic on pointer to void or function type
      s->end = s->start + s->size;
                        ^

base/memheap_base_alloc.c(300): error #1338: arithmetic on pointer to void or function type
      s->end = s->start + s->size;
                        ^

compilation aborted for base/memheap_base_alloc.c (code 2)
make[1]: *** [base/memheap_base_alloc.lo] Error 1
  CC       base/memheap_base_static.lo
base/memheap_base_static.c(65): error #1338: arithmetic on pointer to void or function type
              s->size = s->end - s->start;
                               ^

base/memheap_base_static.c(70): error #1338: arithmetic on pointer to void or function type
              total_mem += s->end - s->start;
                                  ^

compilation aborted for base/memheap_base_static.c (code 2)
make[1]: *** [base/memheap_base_static.lo] Error 1
  CC       base/memheap_base_register.lo
base/memheap_base_register.c(29): error #1338: arithmetic on pointer to void or function type
          MEMHEAP_VERBOSE(5,
          ^

base/memheap_base_register.c(54): error #1338: arithmetic on pointer to void or function type
          MEMHEAP_VERBOSE(5,
          ^

base/memheap_base_register.c(112): error #1338: arithmetic on pointer to void or function type
          s->mkeys = MCA_SPML_CALL(register((void *)(unsigned long)s->start,
                     ^

compilation aborted for base/memheap_base_register.c (code 2)
make[1]: *** [base/memheap_base_register.lo] Error 1
  CC       base/memheap_base_mkey.lo
base/memheap_base_mkey.c(531): error #1338: arithmetic on pointer to void or function type
      return (void*) (remote_base > local_base ? (uintptr_t)va + (remote_base - local_base) :
                                                                              ^

base/memheap_base_mkey.c(532): error #1338: arithmetic on pointer to void or function type
                      (uintptr_t)va - (local_base - remote_base));
                                                  ^

base/memheap_base_mkey.c(602): error #1338: arithmetic on pointer to void or function type
      return ((s && s->is_active) ? (rva - s->mkeys_cache[pe][tr_id].va_base) : 0);
                                         ^

base/memheap_base_mkey.c(621): error #1338: arithmetic on pointer to void or function type
                     && (uintptr_t)va < (uintptr_t) (s->start + mca_memheap.memheap_size)) {
                                                              ^

base/memheap_base_mkey.c(624): error #1338: arithmetic on pointer to void or function type
              assert( (uintptr_t)va >= (uintptr_t)(s->start + mca_memheap.memheap_size) && (uintptr_t)va < (uintptr_t)s->end);
              ^

compilation aborted for base/memheap_base_mkey.c (code 2)
make[1]: *** [base/memheap_base_mkey.lo] Error 1
make[1]: Target `all' not remade because of errors.
make[1]: Leaving directory `/home/jsquyres/svn/ompi2/oshmem/mca/memheap'
Making all in mca/scoll
make[1]: Entering directory `/home/jsquyres/svn/ompi2/oshmem/mca/scoll'
make[1]: Nothing to be done for `all'.
make[1]: Leaving directory `/home/jsquyres/svn/ompi2/oshmem/mca/scoll'
Making all in mca/spml
make[1]: Entering directory `/home/jsquyres/svn/ompi2/oshmem/mca/spml'
make[1]: Nothing to be done for `all'.
make[1]: Leaving directory `/home/jsquyres/svn/ompi2/oshmem/mca/spml'
Making all in .
make[1]: Entering directory `/home/jsquyres/svn/ompi2/oshmem'
make[1]: *** No rule to make target `mca/memheap/libmca_memheap.la', needed by `libshmem.la'.
make[1]: Target `all-am' not remade because of errors.
make[1]: Leaving directory `/home/jsquyres/svn/ompi2/oshmem'
Making all in mca/atomic/basic
make[1]: Entering directory `/home/jsquyres/svn/ompi2/oshmem/mca/atomic/basic'
make[1]: Nothing to be done for `all'.
make[1]: Leaving directory `/home/jsquyres/svn/ompi2/oshmem/mca/atomic/basic'
Making all in mca/memheap/buddy
make[1]: Entering directory `/home/jsquyres/svn/ompi2/oshmem/mca/memheap/buddy'
make[1]: Nothing to be done for `all'.
make[1]: Leaving directory `/home/jsquyres/svn/ompi2/oshmem/mca/memheap/buddy'
Making all in mca/memheap/ptmalloc
make[1]: Entering directory `/home/jsquyres/svn/ompi2/oshmem/mca/memheap/ptmalloc'
make[1]: Nothing to be done for `all'.
make[1]: Leaving directory `/home/jsquyres/svn/ompi2/oshmem/mca/memheap/ptmalloc'
Making all in mca/scoll/basic
make[1]: Entering directory `/home/jsquyres/svn/ompi2/oshmem/mca/scoll/basic'
make[1]: Nothing to be done for `all'.
make[1]: Leaving directory `/home/jsquyres/svn/ompi2/oshmem/mca/scoll/basic'
Making all in mca/spml/yoda
make[1]: Entering directory `/home/jsquyres/svn/ompi2/oshmem/mca/spml/yoda'
make[1]: Nothing to be done for `all'.
make[1]: Leaving directory `/home/jsquyres/svn/ompi2/oshmem/mca/spml/yoda'
Making all in tools/wrappers
make[1]: Entering directory `/home/jsquyres/svn/ompi2/oshmem/tools/wrappers'
make[1]: Nothing to be done for `all'.
make[1]: Leaving directory `/home/jsquyres/svn/ompi2/oshmem/tools/wrappers'
make: *** [all-recursive] Error 1
make: Target `all' not remade because of errors.
